@@ -63,6 +63,6 @@ public class DriverAlertItisCodeService extends BaseService {
                 e.printStackTrace();
             }
         }
-        return new Long(0);
+        return Long.valueOf(0);
     }
 }
