@@ -187,6 +187,6 @@ public class DriverAlertService extends BaseService {
                 e.printStackTrace();
             }
         }
-        return new Long(0);
+        return Long.valueOf(0);
     }
 }
