@@ -59,6 +59,6 @@ public class PathNodeXYService extends BaseService {
                 e.printStackTrace();
             }
         }
-        return new Long(0);
+        return Long.valueOf(0);
     }
 }
