@@ -125,6 +125,6 @@ public class RegionService extends BaseService {
                 e.printStackTrace();
             }
         }
-        return new Long(0);
+        return Long.valueOf(0);
     }
 }
